--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "build": "webpack --config webpack.config.js",
-    "start": "webpack --config webpack.config.js --watch"
+    "start": "webpack --config webpack.config.js --watch",
+    "deploy-storybook": "storybook-to-ghpages"
+  },
+  "storybook-deployer": {
+    "gitUsername": "egeste",
+    "gitEmail": "npm@egeste.net",
+    "commitMessage": "Deploy Storybook"
   },
   "repository": {
     "type": "git",
@@ -26,6 +32,7 @@
   },
   "homepage": "https://github.com/egeste/exploring-audio-vis#readme",
   "dependencies": {
+    "@storybook/storybook-deployer": "^2.0.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.1",
