--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
   },
   "homepage": "https://github.com/egeste/exploring-audio-vis#readme",
   "dependencies": {
-    "@storybook/storybook-deployer": "^2.0.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.1",
@@ -52,6 +51,7 @@
   "devDependencies": {
     "@storybook/react": "^3.2.16",
     "@storybook/addon-actions": "^3.2.16",
-    "@storybook/addon-links": "^3.2.16"
+    "@storybook/addon-links": "^3.2.16",
+    "@storybook/storybook-deployer": "^2.0.0"
   }
 }
